--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/GeneralManager/GeneralManagerLayoutView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/GeneralManager/GeneralManagerLayoutView.fxml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cse213.cse213mangogardenmanagementsystem.GeneralManager.controller.GeneralManagerController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #f4f7f6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.GeneralManager.controller.GeneralManagerController">
 
-</AnchorPane>
+    <!-- TOP: Header/Welcome Area -->
+    <top>
+        <VBox alignment="CENTER_LEFT" style="-fx-background-color: #337ab7; -fx-padding: 15px;" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="GENERAL MANAGER DASHBOARD" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Label>
+                <Label fx:id="welcomeLabel" text="Welcome Message Placeholder" textFill="WHITE" />
+            </children>
+        </VBox>
+    </top>
+
+    <!-- LEFT: Navigation Menu -->
+    <left>
+        <VBox alignment="TOP_CENTER" prefWidth="200.0" spacing="10.0" style="-fx-background-color: #e9ecef; -fx-padding: 15px;" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="NAVIGATION" style="-fx-font-weight: bold; -fx-font-size: 14px; -fx-padding: 0 0 5 0;" />
+                <Button onAction="#loadTaskSummaryView" text="Task Management" maxWidth="Infinity" style="-fx-background-color: #007bff; -fx-text-fill: white;" />
+                <Button onAction="#loadBudgetRequestsView" text="Budget Approvals" maxWidth="Infinity" style="-fx-background-color: #007bff; -fx-text-fill: white;" />
+                <Button onAction="#loadInventoryCheckView" text="Check Inventory" maxWidth="Infinity" style="-fx-background-color: #007bff; -fx-text-fill: white;" />
+                <Button onAction="#loadPayrollGenerationView" text="Generate Payroll" maxWidth="Infinity" style="-fx-background-color: #007bff; -fx-text-fill: white;" />
+            </children>
+            <BorderPane.margin>
+                <Insets right="5.0" />
+            </BorderPane.margin>
+        </VBox>
+    </left>
+
+    <!-- CENTER: Dynamic Content Area -->
+    <center>
+        <VBox fx:id="contentContainer" alignment="TOP_CENTER" spacing="10.0" style="-fx-padding: 15px;">
+            <!-- Content will be injected here dynamically by the controller's setContent method -->
+            <Label text="Select a navigation item to view content." style="-fx-font-size: 16px; -fx-opacity: 0.6;" />
+        </VBox>
+    </center>
+</BorderPane>
