--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Login.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Login.fxml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.cse213.cse213mangogardenmanagementsystem.LoginController">
-    <children>
-        <VBox spacing="12" alignment="CENTER" layoutX="120" layoutY="80">
-            <children>
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.LoginController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
 
-                <Label text="User Login" style="-fx-font-size: 22px; -fx-font-weight: bold;" />
+    <Label text="Mango Garden System">
+        <font>
+            <Font name="System Bold" size="24.0" />
+        </font>
+    </Label>
 
-                <TextField fx:id="usernameField" promptText="Username"
-                           prefWidth="220" />
+    <GridPane alignment="CENTER" hgap="10" vgap="10">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
 
-                <PasswordField fx:id="passwordField" promptText="Password"
-                               prefWidth="220" />
+        <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <TextField fx:id="usernameField" promptText="Enter username" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Button text="Login" prefWidth="220"
-                        onAction="#handleLogin" />
+        <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <PasswordField fx:id="passwordField" promptText="Enter password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    </GridPane>
 
-                <Label fx:id="messageLabel" textFill="red" />
+    <Button onAction="#handleLogin" text="Login" prefWidth="100.0" />
 
-            </children>
+    <Label fx:id="messageLabel" textFill="RED" />
 
-            <padding>
-                <Insets top="20" bottom="20" left="20" right="20"/>
-            </padding>
-        </VBox>
-    </children>
-</AnchorPane>
+</VBox>
