--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/test/test.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/test/test.fxml
@@ -6,11 +6,11 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.OwnerController">
+      fx:controller="com.cse213.cse213mangogardenmanagementsystem.test.controller.testController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Owner!" onAction="#onHelloButtonClick"/>
+    <Button text="test!" onAction="#onHelloButtonClick"/>
 </VBox>
