--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/FireEmployeesView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/FireEmployeesView.fxml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="532.0" prefWidth="673.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+   <children>
+      <TableView fx:id="employeeTV" layoutX="50.0" layoutY="77.0" prefHeight="273.0" prefWidth="573.0">
+         <columns>
+            <TableColumn fx:id="idTC" prefWidth="45.0" text="ID" />
+            <TableColumn fx:id="nameTC" prefWidth="177.0" text="Employee Name" />
+            <TableColumn fx:id="roleTC" prefWidth="97.0" text="Role" />
+            <TableColumn fx:id="joiningdateTC" prefWidth="111.0" text="Joining Date" />
+            <TableColumn fx:id="phoneTC" prefWidth="142.0" text="Phone No." />
+         </columns>
+      </TableView>
+      <Label layoutX="50.0" layoutY="377.0" prefHeight="17.0" prefWidth="139.0" text="Enter employee ID to fire:" />
+      <Label layoutX="50.0" layoutY="412.0" text="Enter reason (if you want):" />
+      <Label fx:id="successLabel" alignment="CENTER" layoutX="50.0" layoutY="478.0" prefHeight="17.0" prefWidth="573.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="idToFireTF" layoutX="204.0" layoutY="373.0" />
+      <TextArea fx:id="reasonTA" layoutX="204.0" layoutY="411.0" prefHeight="56.0" prefWidth="240.0" />
+      <Button layoutX="507.0" layoutY="406.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Fire" textFill="RED">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Text layoutX="50.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Employee List:" wrappingWidth="125.341796875" />
+   </children>
 </AnchorPane>
