--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/AddNewEmployeesView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/AddNewEmployeesView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="422.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="422.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.AddNewEmployeesController">
    <children>
       <Label layoutX="185.0" layoutY="40.0" text="Add New Employees">
          <font>
