--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewSalesSummaryView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewSalesSummaryView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.ViewSalesSummaryController">
    <children>
       <TableView fx:id="ordersTV" layoutX="62.0" layoutY="97.0" prefHeight="254.0" prefWidth="477.0">
         <columns>
