--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/GeneralManager/CheckInventoryView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/GeneralManager/CheckInventoryView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.ViewInventorySummaryController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.GeneralManager.controller.CheckInventoryController">
    <children>
       <TableView fx:id="inventoryTV" layoutX="52.0" layoutY="94.0" prefHeight="263.0" prefWidth="497.0">
         <columns>
