--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ApproveSpecialOrderView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ApproveSpecialOrderView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="475.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="475.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.ApproveSpecialOrdersController">
    <children>
       <TableView fx:id="specialOrdersTV" layoutX="70.0" layoutY="74.0" prefHeight="200.0" prefWidth="461.0">
         <columns>
