--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewAllEmployeesView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewAllEmployeesView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.ViewAllEmployeesController">
    <children>
       <TableView fx:id="employeeTV" layoutX="14.0" layoutY="74.0" prefHeight="273.0" prefWidth="573.0">
         <columns>
