--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewTaskSummaryView.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Owner/ViewTaskSummaryView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CONTROLLER_NAME">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213.cse213mangogardenmanagementsystem.Owner.controller.ViewTaskSummaryController">
    <children>
       <TableView fx:id="tasksTV" layoutX="53.0" layoutY="102.0" prefHeight="246.0" prefWidth="494.0">
         <columns>
