--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/TransportManager/TransportManagerDashboard.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/TransportManager/TransportManagerDashboard.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cse213.cse213mangogardenmanagementsystem.TransportManager.contoller.TransportManagerController"
+            fx:controller="com.cse213.cse213mangogardenmanagementsystem.TransportManager.controller.TransportManagerDashboardController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
