--- a/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Customer/RequestInvoice.fxml
+++ b/src/main/resources/com/cse213/cse213mangogardenmanagementsystem/Customer/RequestInvoice.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cse213.cse213mangogardenmanagementsystem.Customer.contoller.CustomerController"
+            fx:controller="com.cse213.cse213mangogardenmanagementsystem.Customer.controller.RequestInvoiceController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
